--- a/Tahap 2_Subrata Squad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad.csproj
+++ b/Tahap 2_Subrata Squad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad.csproj
@@ -147,6 +147,12 @@
     <Compile Include="FormLogin.designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTambahHadiah.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTambahHadiah.Designer.cs">
+      <DependentUpon>FormTambahHadiah.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTambahStok.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -254,6 +260,12 @@
     </Compile>
     <Compile Include="FormUbahCabang.designer.cs">
       <DependentUpon>FormUbahCabang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormUbahHadiah.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUbahHadiah.Designer.cs">
+      <DependentUpon>FormUbahHadiah.cs</DependentUpon>
     </Compile>
     <Compile Include="FormUbahKategori.cs">
       <SubType>Form</SubType>
@@ -389,6 +401,9 @@
     <EmbeddedResource Include="FormTambahCabang.resx">
       <DependentUpon>FormTambahCabang.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormTambahHadiah.resx">
+      <DependentUpon>FormTambahHadiah.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormTambahKategori.resx">
       <DependentUpon>FormTambahKategori.cs</DependentUpon>
     </EmbeddedResource>
@@ -400,6 +415,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormUbahCabang.resx">
       <DependentUpon>FormUbahCabang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUbahHadiah.resx">
+      <DependentUpon>FormUbahHadiah.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormUbahKategori.resx">
       <DependentUpon>FormUbahKategori.cs</DependentUpon>
