--- a/Tahap 2_Subrata Squad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad.csproj
+++ b/Tahap 2_Subrata Squad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad.csproj
@@ -279,6 +279,12 @@
     <Compile Include="FormUbahHadiah.Designer.cs">
       <DependentUpon>FormUbahHadiah.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormUbahJumlahBarang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUbahJumlahBarang.Designer.cs">
+      <DependentUpon>FormUbahJumlahBarang.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormUbahKategori.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -442,6 +448,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormUbahHadiah.resx">
       <DependentUpon>FormUbahHadiah.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUbahJumlahBarang.resx">
+      <DependentUpon>FormUbahJumlahBarang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormUbahKategori.resx">
       <DependentUpon>FormUbahKategori.cs</DependentUpon>
