--- a/Tahap 2_Subrata Squad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad.csproj
+++ b/Tahap 2_Subrata Squad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad/OnlineMart_SubrataSquad.csproj
@@ -75,6 +75,12 @@
     <Compile Include="FormCheckout.designer.cs">
       <DependentUpon>FormCheckout.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormDetailBarangOrder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDetailBarangOrder.Designer.cs">
+      <DependentUpon>FormDetailBarangOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormHistoryGiftRedeem.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -352,6 +358,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormCheckout.resx">
       <DependentUpon>FormCheckout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDetailBarangOrder.resx">
+      <DependentUpon>FormDetailBarangOrder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormHistoryGiftRedeem.resx">
       <DependentUpon>FormHistoryGiftRedeem.cs</DependentUpon>
